# Tycoon-Monorepo

./: .gitignore  COMMIT_MESSAGE.txt  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  package.json
.github/workflows/: backend-ci.yml  ci.yml  contract-ci.yml  frontend-ci.yml
backend/: .env.example  README.md  jest.config.ts  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/test/: observability.e2e-spec.ts
contract/: SECURITY_REVIEW_CHECKLIST.md
contract/ci/: wasm-size-budget.json
contract/contracts/tycoon-lib/: CHANGELOG.md  Cargo.toml  SECURITY_REVIEW_CHECKLIST.md
contract/contracts/tycoon-lib/src/: access_control.rs  auth.rs  events.rs  fees.rs  fees_coverage_tests.rs  legacy.rs  lib.rs  migration.rs  simulation_tests.rs  storage_budget.rs
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/docs/: SW-FE-003-landing-hero-vitest-rtl-coverage.md  SW-FE-005-landing-hero-error-empty-states.md  SW-FE-007-landing-hero-security-hardening.md  SW-FE-008-landing-hero-msw-fixtures-parity.md  SW-FE-033-near-wallet-a11y.md  SW-FE-033-near-wallet-accessibility.md  SW-FE-034-join-room-a11y-focus-order.md  SW-FE-035-join-room-ts-strictness.md  SW-FE-036-join-room-cls-lcp-budget.md  SW-FE-037-join-room-error-empty-states.md  SW-FE-038-join-room-vitest-rtl-coverage.md  SW-FE-039-join-room-telemetry.md  SW-FE-039-near-wallet-security-hardening.md
frontend/src/: middleware.ts
frontend/test/: HeroSection.error-empty.test.tsx  HeroSection.test.tsx  JoinRoomForm.coverage.test.tsx  page.test.tsx  (+11 more)
(+279 files in other folders)
